[backend] GET media + improve other C(R)UD features
